--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-class": "^15.6.2",
+    "generator-react-firebase": "^2.0.0-rc.2",
     "history": "^4.7.2",
+    "lodash.times": "^4.3.2",
     "markdown": "^0.5.0",
+    "material-ui": "^0.20.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-medium-editor": "^1.8.1",
@@ -13,6 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.0.17",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "to-markdown": "^3.1.1"
@@ -24,6 +30,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "react-tap-event-plugin": "^3.0.2",
     "superagent": "^3.8.2"
   }
 }
